@@ -35,8 +35,10 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       (backported from 5.1.1)
   e - TRQ-3095. Add the server setting disable_automatic_requeue to stop jobs from being
       requeued if they experience a transient failure on the mom. (backported from 5.1.1)
-  e - TRQ-2307. Fix probelms where mom restarts intermittently fail. (backported from 5.1.1)
+  e - TRQ-2307. Fix problems where mom restarts intermittently fail. (backported from 5.1.1)
   b - TRQ-2946. Make qmgr able to handle Cray numeric node ids. (backported from 5.1.1)
+  b - TRQ-2790. Make offlining cray compute nodes persist across restarts. 
+      (backported from 5.1.1)
  
 
 5.0.1.h2
